# aoc

./: README.md  advent_test.go  main.go
2022/Day1/: part1.go
2022/Day2/: play.go  score.go
2022/Day3/: part1.go  part2.go
2022/Day4/: day4.go
2022/Day5/: Crate.go  day5.go
2022/Day6/: day6.go
2022/Day7/: command.go  day7.go  directory.go  file.go
2022/Day8/: Day8.go  Tree.go
2022/Utils/: Utils.go
2023/: pyproject.toml
2023/Day1/: part1.py  part2.py
2023/Day2/: part1.py  part2.py
2023/Day3/: part1.py  part2.py
2023/Day4/: part1.py  part2.py
2023/Day5/: part1.py  part2.py
2023/Day6/: solution.py
2023/Day7/: ex.txt  ex3.txt  exm.txt  part1.py  part2.py
2023/Day8/: part1.py  part2.py
2023/Day9/: part1.py  part2.py
2023/Day_10/: solution.py
2023/aoc/: cli.py
2023/aoc/day1/: example2.txt  solution.py
2023/aoc/day10/: ex.txt  solution.py
2023/aoc/day11/: doesntwork.txt  solution.py
2023/aoc/day2/: solution.py
2023/aoc/day3/: solution.py
2023/aoc/day4/: solution.py
2023/aoc/day5/: solution.py
2023/aoc/day6/: solution.py
2023/aoc/day7/: solution.py
2023/aoc/day8/: solution.py
2023/aoc/day9/: solution.py
2023/aoc/utils/: day.py
2023/tests/day11/: test_part1.py
Day1/: ElfDay1.go  part2.go
Day10/: Day10.go  Statement.go
Day11/: day11.go  monkey.go
Day2/: outcome.go  part1.go  part2.go  utilsDay2.go
Day5/: Stack.go
Day7/: node.go
Day9/: Day9.go  Day9Instruction.go
Utils/: Utils.go
