[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Cole Ramey <ceramey1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
click = "^8.1.7"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
[tool.poetry.scripts]
aoc = "aoc.cli:cli"
